[package]
name = "neutralipcrs"
description = "Neutral TS Rust IPC Client. Neutral is a web template engine designed to work with any programming language via IPC and natively as library/crate."
license = "Apache-2.0"
version = "1.3.3"
edition = "2021"
homepage = "https://github.com/FranBarInstance/neutralts"
repository = "https://github.com/FranBarInstance/neutralipcrs"
documentation = "https://franbarinstance.github.io/neutralts-docs/docs/neutralts/"
keywords = ["webdev", "template-engine", "mustache", "templating", "jinja2"]
categories = ["template-engine", "web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
